# legacy-pipeline-migrator

./: .env.example  .gitignore  Dockerfile  MANUAL_TESTING_GUIDE.md  MIGRATION_NOTES.md  README.md  RUNBOOK.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
config/: field_mapping.yaml  logging.yaml  thresholds.yaml
dags/: transaction_pipeline_dag.py
k8s/: configmap-app-config.yaml  configmap-sample-data.yaml  job.yaml  namespace.yaml
legacy/: legacy_loader.pl
scripts/: generate_architecture_diagram.ps1  run_integration_tests.sh
scripts/sftp_server_docker/: docker-compose.yaml
sql/: reconciliation_queries.sql  schema.sql
src/pipeline/: __init__.py  alerting.py  config.py  loader.py  logging_setup.py  models.py  oracle_client.py  parse.py  sftp_client.py  validate.py
tests/: test_alerting.py  test_dag.py  test_dag_failure_callback.py  test_loader.py  test_logging_setup.py  test_oracle_client.py  test_parse.py  test_sftp_client.py  test_validate.py
tests/fixtures/: crlf_transactions.txt  malformed_transactions.txt  valid_transactions.txt
tests/integration/: conftest.py  test_oracle_integration.py
