[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "legacy-pipeline-migrator"
version = "0.1.0"
description = "Legacy Perl to Python transaction pipeline migration"
requires-python = ">=3.10"
dependencies = [
    "oracledb>=2.0.0",
    "paramiko>=3.4.0",
    "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.5.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
